--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-numpy==1.24.3
-matplotlib==3.7.1
-scipy==1.10.1
-pandas==2.0.3
+numpy==1.26.4
+matplotlib==3.8.3
+scipy==1.12.0
+pandas==2.2.1
 jupyter==1.0.0
-ipykernel==6.22.0
-ipywidgets==8.0.6
-notebook==6.5.4
-seaborn==0.12.2
-scikit-learn==1.2.2
+ipykernel==6.29.3
+ipywidgets==8.1.2
+notebook==7.1.2
+seaborn==0.13.2
+scikit-learn==1.4.1
+sympy==1.12.0
+plotly==5.19.0
+plotly-express==0.4.1
+
